@@ -1,3 +1,6 @@
+- partitioning:
+  o fix regression refusing FAT for ESP (mga#15962)
+
 Version 16.95 - 14 May 2015
 
 - better dialog title (mga#9648)
